--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-python-telegram-bot[job-queue]
-pytz
-firebase-admin
-google-generativeai
+python-telegram-bot==20.8
+google-generativeai==0.3.2
+pytz==2023.3.post1
